A 新增config.page.cache配置，可抓取api数据 （this.apiData） A 新增 config.page.emulate可模拟设备启动 U 优化Page的id, folder为this.html F cli的bug A 引入deepmerge包合并config

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^3.5.2",
     "puppeteer": "^2.1.1",
     "temme": "^0.8.3",
-    "yargs": "^15.1.0"
+    "yargs": "^15.1.0",
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {}
 }
